Add TfeService Tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/material": "latest",
+    "jest-fetch-mock": "^3.0.3",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest"
@@ -27,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
