Add home stop feature

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/material": "latest",
+    "@mui/icons-material": "latest",
     "jest-fetch-mock": "^3.0.3",
     "react": "latest",
     "react-dom": "latest",
@@ -30,6 +31,7 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "@babel/plugin-proposal-private-property-in-object": "latest"
   }
 }
